[tool.poetry]
name = "pyscraper"
version = "0.1.0"
description = ""
authors = ["ritzier <ritzierwheat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
argparse = "^1.4.0"
webdriver-manager = "^4.0.2"

[tool.poetry.scripts]
pyscraper = "pyscraper:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
